# seam-carving

./: .gitignore  CMakeLists.txt  README.md
src/: SeamCarver.cpp  SeamCarver.hpp  main.cpp
